--- a/web/views/admin/layout.html
+++ b/web/views/admin/layout.html
@@ -9,9 +9,7 @@
     <!-- Optional Bootstrap Theme -->
     <link href="data:text/css;charset=utf-8," data-href="/public/dist/css/bootstrap-theme.min.css" rel="stylesheet" id="bs-theme-stylesheet">
     <title>{{.Title}} - Go抽奖系统</title>
-
 </head>
-
 <body>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -46,11 +44,11 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">更多 <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">菜单1</a></li>
+                        <li><a href="#">菜单2</a></li>
+                        <li><a href="#">菜单3</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">菜单4</a></li>
                     </ul>
                 </li>
             </ul>
